# rust-sandbox

./: Cargo.toml  README.md
0_basics/: README.md
1_concepts/1_1_default_clone_copy/: README.md
1_concepts/1_1_default_clone_copy/src/: main.rs
1_concepts/1_1_default_clone_copy/src/point/: mod.rs  point.rs  polyline.rs
1_concepts/1_1_default_clone_copy/src/structs/: point.rs  polyline.rs
1_concepts/1_2_box_pin/: Cargo.toml
1_concepts/1_2_box_pin/src/: main.rs
1_concepts/1_2_box_pin/src/pins/: base_struct.rs  base_traits.rs  bytes_pin.rs  future.rs  mod.rs  t_pin.rs  vec_pin.rs
1_concepts/1_2_box_pin/src/pins/basic/: box_pin.rs  mod.rs  (+4 more)
1_concepts/1_3_rc_cell/src/: main.rs  stack.rs
1_concepts/1_4_cow/: Cargo.toml
1_concepts/1_4_cow/src/: main.rs
1_concepts/1_5_convert_cast_deref/: Cargo.toml
1_concepts/1_5_convert_cast_deref/src/: email_string.rs  main.rs  random_t.rs
1_concepts/1_6_dispatch/src/: base.rs  dynamic.rs  lib.rs  main.rs  static.rs  storage.rs  user.rs
1_concepts/1_7_sized/: Cargo.toml  README.md
1_concepts/1_7_sized/src/: command.rs  command_handler.rs  create_user.rs  main.rs  user_command_handler.rs
1_concepts/1_8_thread_safety/src/: main.rs  types.rs
1_concepts/1_9_phantom/src/: fact.rs  main.rs
1_concepts/src/: doubly_linked_list.rs  list.rs  list_node.rs  main.rs  parallel_list.rs  parallel_node.rs  real_parallel_list.rs
2_idioms/2_1_type_safety/src/: main.rs  post.rs  user.rs  wrapper.rs
2_idioms/2_2_mem_replace/src/: main.rs
2_idioms/2_3_bound_impl/src/: main.rs
2_idioms/2_4_generic_in_type_out/src/: main.rs
2_idioms/2_5_exhaustivity/src/: lib.rs
2_idioms/2_6_sealing/src/: lib.rs  my_error.rs  my_iterator_ext.rs
2_idioms/src/: main.rs
2_idioms/src/coin/: coin.rs
2_idioms/src/machine/: change_counter.rs  helpers.rs  mod.rs  product.rs  vending_machine.rs
2_idioms/src/machine/error/: bad_price.rs  bad_price_error.rs  mod.rs  not_enough_capacity.rs  not_enough_change.rs  not_enough_money.rs  product_not_found.rs  vending_error.rs
2_idioms/src/machine/request/: mod.rs  product_request.rs  request_state.rs
3_ecosystem/: Cargo.toml
3_ecosystem/3_10_threads/: Cargo.toml  README.md
3_ecosystem/3_10_threads/src/: main.rs
3_ecosystem/3_11_async/: Cargo.toml  README.md
3_ecosystem/3_11_async/src/: main.rs
3_ecosystem/3_1_testing/: Cargo.toml
3_ecosystem/3_1_testing/proptest-regressions/: main.txt
3_ecosystem/3_1_testing/src/: main.rs
3_ecosystem/3_2_macro/: Cargo.toml
3_ecosystem/3_2_macro/my_proc_macros_lib/: Cargo.toml
3_ecosystem/3_2_macro/my_proc_macros_lib/src/: lib.rs
3_ecosystem/3_2_macro/my_proc_macros_lib/tests/: test.rs
3_ecosystem/3_2_macro/src/: main.rs
3_ecosystem/3_3_date_time/: Cargo.toml
3_ecosystem/3_3_date_time/src/: main.rs
3_ecosystem/3_4_regex_parsing/: Cargo.toml
3_ecosystem/3_4_regex_parsing/src/: main.rs
3_ecosystem/3_5_collections/src/: main.rs
3_ecosystem/3_6_serde/: Cargo.toml
3_ecosystem/3_6_serde/src/: debug.rs  gift.rs  main.rs  private_tariff.rs  public_tariff.rs  request.rs  stream.rs
3_ecosystem/3_7_rand_crypto/: Cargo.toml  README.md  test.txt
3_ecosystem/3_7_rand_crypto/src/: main.rs
3_ecosystem/3_8_log/: Cargo.toml
3_ecosystem/3_8_log/src/: main.rs
3_ecosystem/3_9_cmd_env_conf/: Cargo.toml  config.toml
3_ecosystem/3_9_cmd_env_conf/src/: main.rs  settings.rs
3_ecosystem/src/: cli.rs  file_parser.rs  image_processor.rs  logger.rs  main.rs  rgba_wrapper.rs  settings.rs  stdin_reader.rs
4_backend/: .env  Cargo.toml
4_backend/4_1_db/: Cargo.toml  README.md
4_backend/4_1_db/entities/: Cargo.toml
4_backend/4_1_db/entities/src/: lib.rs  prelude.rs  role.rs  user.rs  users_roles.rs
4_backend/4_1_db/src/: cli.rs  cli_processor.rs  db.rs  db_processor.rs  main.rs
4_backend/4_2_http/: Cargo.toml  README.md
4_backend/4_2_http/cli/: Cargo.toml
4_backend/4_2_http/cli/src/: cli_processor.rs  main.rs  requests.rs  web_processor.rs
4_backend/4_2_http/entities/: Cargo.toml
4_backend/4_2_http/entities/src/: role.rs  user.rs  users_roles.rs
4_backend/4_2_http/migration/src/: m20220101_000001_create_table.rs
4_backend/4_2_http/src/: main.rs  request_processor.rs
4_backend/4_3_api/: Cargo.toml  README.md
4_backend/4_3_api/cli/src/: cli.rs  web_processor.rs
4_backend/4_3_api/entities/: Cargo.toml
4_backend/4_3_api/entities/src/: role.rs  user.rs
4_backend/4_3_api/migration/src/: m20220101_000001_create_table.rs
4_backend/4_3_api/src/: main.rs  role.rs  user.rs
4_backend/entities/: Cargo.toml
4_backend/entities/src/: lib.rs  prelude.rs  user.rs  users_friends.rs
4_backend/migration/: Cargo.toml
4_backend/migration/src/: m20220101_000001_create_table.rs
4_backend/src/: db.rs  hashing.rs  main.rs  schema.rs  token.rs
(+2 files in other folders)
