[package]
name = "step_3"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytemuck = "1.14.0"
clap = {version = "4.3.19", features = ["derive", "cargo"]}
image = "0.24.7"
imagequant = "4.2.1"
pariter = "0.5.1"
reqwest = "0.11.20"
rgb = "0.8.36"
smart-default = "0.7.1"
tokio = {version = "1.32.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["json", "time", "registry"]}
url = "2.4.1"
