[package]
name = "step_4"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web = "4.4.0"
async-graphql = "4.0"
async-graphql-actix-web = "4.0"
sea-orm = {version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls"]}
entities = {path = "entities"}
migration = {path = "migration"}
