[package]
name = "step_3_6"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
duration-str = "0.5.1"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.105"
serde_yaml = "0.9.25"
time = { version = "0.3.25", features = ["serde", "std", "serde-human-readable"] }
toml = "0.7.6"
url = { version = "2.2.1", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

