[package]
name = "step_3_9"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
clap = {version = "4.3.19", features = ["derive", "cargo"]}
config = "0.12.0"
url = { version = "2.2.1", features = ["serde"] }
serde = {version = "1.0.188", features = ["derive"] }
time = { version = "0.3.25", features = ["serde", "std", "serde-human-readable"] }
serde_derive = "1.0.188"
serde_json = "1.0.105"
smart-default = "0.7.1"
toml = "0.7.7"
humantime-serde = "1.1.1"
secrecy = {version = "0.8.0", features = ["serde", "alloc"] }
