[package]
name = "step_4_2"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros",  ] }
entities = { path = "entities" }
migration = { path = "migration" }
cli = { path = "cli" }
actix-web = "4"
serde_json = "1.0.107"
futures = { version = "0.3.28", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"