[package]
name = "step_4_3"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros",  ] }
entities = { path = "entities" }
migration = { path = "migration" }
cli = { path = "cli" }
actix-web = "4"
serde_json = "1.0.107"
futures = { version = "0.3.28", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
tracing = "0.1.37"
utoipa = {version = "3.5.0",  features = ["actix_extras"] }
utoipa-swagger-ui = {version = "3.1.5",  features = ["actix-web"] }
